[project]
name = "vllm-router"
authors = [
  { name = "Christos Karanikolopoulos", email = "chkaranikolopoulos@cs.uoi.gr" },
]
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "vllm>=0.17.1",
]

[project.scripts]
route = "app:__main__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", ".vscode"]

[tool.ruff.lint]
select = [
  # linting
  "B",    # flake8-bugbear
  "C",    # flake8-comprehensions
  "D200", # unnecessary-multiline-docstring
  "D202", # blank-line-after-function
  "E",    # pycodestyle
  "F",    # Pyflakes
  "PL",   # pylint
  # formatting
  "I",    # isort
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]
ignore = [
  "B905",    # zip-without-explicit-strict
  "E731",    # lambda-assignment
  "PLR0913", # too-many-arguments
  "W191",    # indentation-with-tabs, handled by ruff-format
]

[tool.ruff.lint.isort]
from-first = false
force-single-line = false
length-sort = true
lines-between-types = 1
known-first-party = ["pulse"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
